# dremini

./: .gitignore  CMakeLists.txt  LICENSE  README.md
dremini/: GeminiClient.cpp  GeminiClient.hpp  GeminiParser.cpp  GeminiParser.hpp  GeminiRenderer.cpp  GeminiRenderer.hpp  GeminiServer.cpp  GeminiServer.hpp  GeminiServerPlugin.cpp  GeminiServerPlugin.hpp
examples/: CMakeLists.txt
examples/basic_gemlog/: drogon.config.json  main.cpp
examples/basic_gemlog/files/: another_page.gmi  index.gmi
examples/basic_gemlog/templates/: unix_time.csp
examples/gemini_client/: gemini_client.cpp
tests/: CMakeLists.txt
tests/test_client/: test_client.cpp
tests/test_server/: about.gmi  cert.pem  drogon.config.json  index.gmi  key.pem  test_server.cpp
tests/unittest/: gemini_renderer_test.cpp  main.cpp
